@@ -1,3 +1,23 @@
+/*
+	Simple server application for receiving logdata from PSPRadio.
+	Copyright (C) 2006 Jesper Sandberg
+
+
+	This program is free software; you can redistribute it and/or
+	modify it under the terms of the GNU General Public License
+	as published by the Free Software Foundation; either version 2
+	of the License, or (at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, write to the Free Software
+	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+*/
+
 #include <stdio.h>
 #include <sys/socket.h>
 #include <arpa/inet.h>
@@ -23,7 +43,7 @@ int main (int argc, char *argv[])
 	unsigned int	client_len, server_len;
 	int				received = 0;
 
-	fprintf(stdout, "LogTool v0.1\n\n");
+	fprintf(stdout, "LogTool v0.1 - Written for use with PSPRadio\n\n");
 
 
 	if (argc != 2)
