@@ -3,7 +3,6 @@ EVENT_THREAD_PRIO=80;
 PROGRAM_VERSION_XY=79,261;
 SHOW_FILE_EXTENSION=0;
 IP_XY=322,248;
-FONT_SIZE=8,8;
 WIFI_ICON_XY=416,102;
 BATTERY_ICON_XY=416,132;
 LIST_ICON_XY=69,237;
@@ -47,3 +46,7 @@ GFX_USB_SIZE=32,64;
 GFX_USB_H=32;
 GFX_PLAYSTATE_SIZE=64,32;
 GFX_PLAYSTATE_H=8;
+GFX_ERROR_SIZE=256,128;
+GFX_ERROR_W=256;
+GFX_ERROR_OFFSET=24,48;
+GFX_FONT1_SIZE=8,8;
